src/objects/Global_Charges__c.object
<CustomObject>
    <fields>
        <fullName>ACH__c</fullName>
        <label>+ ACH</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACNO__c</fullName>
        <label>ACNO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_ID__c</fullName>
        <label>Charge ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Rcvd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Backup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Dishonor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamp Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Society Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amenity Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master_Config</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Global Charges</relationshipLabel>
        <relationshipName>Global_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nature_of_Charge__c</fullName>
        <label>Nature of Charge</label>
        <picklist>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC__c</fullName>
        <label>+ PC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_to_FA_system__c</fullName>
        <label>Posting to FA system</label>
        <picklist>
            <picklistValues>
                <fullName>CLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACNO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Charge_ID__c</fullName>
        <label>Standard Charge ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Charges</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Global_Charges__c.Charge_Type__c</field>
                <operation>equals</operation>
                <value>Tax</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Global Charges</relationshipLabel>
        <relationshipName>Global_Charges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Global Charges</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Global Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Charges</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Length_Code_Count</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Code__c) !=3</errorConditionFormula>
        <errorDisplayField>Code__c</errorDisplayField>
        <errorMessage>Global Charge Code must be three digit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Posting_To_Fa_System_ACNO</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;CLC&apos;) , NOT(  ISBLANK(  ACNO__c  )    ) )</errorConditionFormula>
        <errorDisplayField>ACNO__c</errorDisplayField>
        <errorMessage>After Selecting CLC  Pick Value,You cannn&apos;t enter in ACNO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Posting_To_Fa_System_CLC</fullName>
        <active>true</active>
        <description>When User Select ACNO of PickList and Enter data in +PC</description>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;ACNO&apos;) , NOT( ISBLANK(  PC__c  ) ) )</errorConditionFormula>
        <errorDisplayField>PC__c</errorDisplayField>
        <errorMessage>After Selecting ACNO Pick Value,You cannn&apos;t enter in  +PC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Posting_To_Fa_System_CLC_ACNO</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;ACNO&apos;) , NOT( ISBLANK(  ACH__c  ) ) )</errorConditionFormula>
        <errorDisplayField>ACH__c</errorDisplayField>
        <errorMessage>After Selecting ACNO Pick Value,You cannn&apos;t enter in +ACH</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_Charge_must_be_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Charge_Type__c, &apos;tax&apos;),LEN(Tax_Charge__c)&gt;0 )</errorConditionFormula>
        <errorDisplayField>Tax_Charge__c</errorDisplayField>
        <errorMessage>You Cannot Select Tax Charge for Tax</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Without_Selecting_Entering_in_ACNO</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK(  ACNO__c  ) ) )</errorConditionFormula>
        <errorDisplayField>ACNO__c</errorDisplayField>
        <errorMessage>You cannn&apos;t enter in ACNO without selecting Posting to FA System Pick Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Without_Selecting_Entering_in_CLC</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK( ACH__c  ) ) )</errorConditionFormula>
        <errorDisplayField>ACH__c</errorDisplayField>
        <errorMessage>You cannn&apos;t enter in ACH without selecting Posting to FA System Pick Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Without_Selecting_Entering_in_PC</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK( PC__c ) ) )</errorConditionFormula>
        <errorDisplayField>PC__c</errorDisplayField>
        <errorMessage>You cannn&apos;t enter in PC without selecting Posting to FA System Pick Value.</errorMessage>
    </validationRules>
</CustomObject>